objects/PMC_ProcessSwitches__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This Custom Setting is for implementing bypass framework for triggers, flows, integrations and validation rules.</description>
    <fields>
        <fullName>PMC_BypassFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to bypass the flows.</description>
        <label>Bypass Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_BypassIntegration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to bypass integrations</description>
        <label>Bypass Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_BypassTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to bypass trigger framework</description>
        <label>Bypass Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_BypassValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to bypass the validation rules</description>
        <label>Bypass Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <label>Process Switches</label>
</CustomObject>